# AIML425_assignment_4

./: README.md  main.ipynb  main.py  pyproject.toml  references.bib  report.tex
src/: data.py  inspect.py  model.py  train.py
